--- a/src/blocks/block-grid-container/styles/style.scss
+++ b/src/blocks/block-grid-container/styles/style.scss
@@ -133,6 +133,14 @@
 	margin-right: auto;
 }
 
+/* WP 2019 Theme */
+@media only screen and (min-width: 1px) and (max-width: 667px) {
+	.page.page-template-default .entry .entry-content>.c9-grid {
+		margin-left: -1rem;
+		margin-right: -1rem;
+	}
+}
+
 @media only screen and (min-width: 1px) {
 	.page-template-default .entry-content>.c9-grid {
 		width: 100vw;
@@ -192,12 +200,6 @@
 		padding-right: 0px;
 	}
 
-}
-
-@media only screen and (max-width: 767px) and (min-width: 1px) {
-	:root {
-		font-size: 50%;
-	}
 }
 
 @media only screen and (min-width: 768px) {
